[gd_scene load_steps=8 format=3 uid="uid://w0jtokddq4er"]

[ext_resource type="Script" path="res://scenes/levels/main/main.gd" id="1_gi007"]
[ext_resource type="PackedScene" uid="uid://dya5c57yq76au" path="res://scenes/levels/main/score_counter.tscn" id="2_ld2hc"]
[ext_resource type="PackedScene" uid="uid://cwjdmjmwuyqem" path="res://scenes/player/player.tscn" id="2_ox6bm"]
[ext_resource type="PackedScene" uid="uid://bcs5w3kst2vol" path="res://scenes/levels/main/level_chunk_01.tscn" id="2_r1lcs"]
[ext_resource type="PackedScene" uid="uid://dyw4myjc24fl0" path="res://scenes/levels/main/level_chunk_02.tscn" id="3_yhscp"]
[ext_resource type="PackedScene" uid="uid://b5d5us5gsw7ej" path="res://scenes/levels/main/level_chunk_03.tscn" id="4_3w2cb"]

[sub_resource type="Curve2D" id="Curve2D_hha5o"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 30)
}
point_count = 2

[node name="MainLevel" type="Node"]
script = ExtResource("1_gi007")

[node name="ScoreCounter" parent="." node_paths=PackedStringArray("score_label") instance=ExtResource("2_ld2hc")]
score_label = NodePath("../UI/ScoreLabel")

[node name="LevelChunks" type="Node" parent="."]

[node name="LevelChunk01" parent="LevelChunks" instance=ExtResource("2_r1lcs")]
position = Vector2(-1152, 0)

[node name="LevelChunk02" parent="LevelChunks" instance=ExtResource("3_yhscp")]

[node name="LevelChunk03" parent="LevelChunks" instance=ExtResource("4_3w2cb")]
position = Vector2(1152, 0)

[node name="Player" parent="." instance=ExtResource("2_ox6bm")]
position = Vector2(217, 299)

[node name="UI" type="CanvasLayer" parent="."]

[node name="GameOverLabel" type="Label" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -29.0
offset_right = 114.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "GAME OVER"

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 10.0
offset_right = 218.0
offset_bottom = 55.0
theme_override_font_sizes/font_size = 30
text = "Score: 999999"

[node name="HumanSpawnPath" type="Path2D" parent="."]
position = Vector2(576, 590)
curve = SubResource("Curve2D_hha5o")

[node name="SpawnLocation" type="PathFollow2D" parent="HumanSpawnPath"]
rotation = 1.5708
